// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Dog: Represents a dog belonging to an owner, with details about their breed and size.
Owner: Represents a dog owner who can register dogs and request walks.
Payment: Represents payment records for completed dog walks.
WalkRequest: Represents a request for a walk made by an owner for their dogs, matched to available walkers.
Walker: Represents a registered dog walker who can set availability and accept walk requests.
'''
}

Table Dog {
    id INTEGER [primary key]
    owner_id INTEGER 
    name VARCHAR 
    breed VARCHAR 
    size VARCHAR 
    notes VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Owner {
    id INTEGER [primary key]
    name VARCHAR 
    address VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Payment {
    id INTEGER [primary key]
    walk_request_id INTEGER 
    amount FLOAT 
    payment_date DATETIME 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table WalkRequest {
    id INTEGER [primary key]
    owner_id INTEGER 
    walker_id INTEGER 
    scheduled_date DATETIME 
    time_slot VARCHAR 
    status VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }

Table Walker {
    id INTEGER [primary key]
    first_name VARCHAR 
    last_name VARCHAR 
    postal_code VARCHAR 
    phone VARCHAR 
    email VARCHAR 
    max_dogs_per_walk INTEGER 
    small_dog_price FLOAT 
    medium_dog_price FLOAT 
    large_dog_price FLOAT 
    available_days VARCHAR 
    available_times VARCHAR 
    created_date DATETIME 
    updated_date DATETIME 
    created_by VARCHAR 
    }



// Relationships
    Ref: Dog.(owner_id) < Owner.(id)
    Ref: Payment.(walk_request_id) < WalkRequest.(id)
    Ref: WalkRequest.(owner_id) < Owner.(id)
    Ref: WalkRequest.(walker_id) < Walker.(id)
